# mini-swe-agent-sandbox

./: .env.miniswe  .gitignore  README.md  pyproject.toml
configs/: swebench_agent_sandbox.yaml
configs/mini_swe_agent/: swebench_agent_sandbox.yaml
docs/: agent-sandbox-research.md  expansion-plan.md  port-guided.md  port-plan.md  testing-agent-sandbox.md
infra/: .env.example  .gitignore  00-check-prerequisites.sh  01-create-cluster.sh  02-create-nodepools.sh  03-install-kuberay.sh  04-install-agent-sandbox.sh  05-setup-rbac.sh  06-verify.sh  07-deploy-raycluster.sh  README.md  lib.sh  load-config.sh  teardown-smoke.sh  teardown.sh  up-smoke.sh  up.sh
infra/manifests/: generate-runner.yaml  kuberay-operator-values.yaml  raycluster-sample.yaml  sandbox-example.yaml  sandbox-runtime-server-configmap.yaml  sandbox-template-multiplication.yaml  sandbox-warmpool-multiplication.yaml  smoke-runner.yaml
mini_swe_agent_sandbox/: __init__.py  environment.py  generator.py  kubernetes_util.py  main.py  utils.py
scripts/: run_mini_swe_agent_sandbox.sh  run_smoke_in_pod.sh  smoke_test_agent_sandbox.py
scripts/mini_swe_agent/: run_generate_fireworks.sh  run_generate_in_pod.sh  run_generate_openai.sh  run_mini_swe_agent_sandbox.sh  run_smoke_in_pod.sh  smoke_test_agent_sandbox.py
scripts/multiplication/: run_generate_fireworks.sh  run_generate_in_pod.sh  run_generate_multiply.sh  run_multiply_sandbox.sh
skyrl_sandbox/: __init__.py
skyrl_sandbox/mini_swe_agent/: __init__.py  environment.py  generate.py  generator.py  kubernetes_util.py  main.py  preprocess.py  utils.py
skyrl_sandbox/multiplication/: __init__.py  dataset.py  env.py  generate.py  generator.py  main.py  sandbox.py
