[project]
name = "skyrl-sandbox"
version = "0.1.0"
description = "Run SkyRL RL workloads (mini-swe-agent SWE-bench; a toy multiplication task) on kubernetes-sigs/agent-sandbox instead of Podman."
readme = "README.md"
# 3.12+: the copied mini_swe_agent/utils.py uses a 3.12-only nested-quote f-string, and the fsdp stack
# (flash-attn wheel) targets cp312. uv then auto-selects 3.12 for the venv.
requires-python = ">=3.12"
dependencies = [
    # Pin to 0.5.x (lock the minor, allow patch only): 0.5.0 was a breaking change vs 0.4.x — GVK moved
    # v1alpha1 -> v1beta1, and SandboxClient.create_sandbox switched from template-based to warmpool-based
    # (create_sandbox(warmpool=...): claim -> SandboxWarmPool -> SandboxTemplate, plus pod_labels/
    # pod_annotations). The multiplication backend + manifests + docs target this 0.5.x warmpool/v1beta1
    # model. The cluster's AGENT_SANDBOX_VERSION controller must serve v1beta1 to match. See
    # docs/expansion-plan.md §5 and docs/agent-sandbox-research.md.
    "k8s-agent-sandbox>=0.5.0,<0.6",
    "kubernetes>=27.2.0",
    "mini-swe-agent>=1.12.0,<2",
    "litellm",
    "datasets>=4.0.0",
]

[project.optional-dependencies]
fsdp = ["skyrl[fsdp]"]
# Lighter tier for generate-only runs: skyrl-train deps (ray, skyrl-gym, transformers, hydra) WITHOUT
# the vllm/torch-pin/flashinfer inference stack. Generation takes tokens from litellm (Fireworks) with
# run_engines_locally=false, so vllm is never started -- only needs to be importable, which it isn't on
# this path. Use for the no-GPU generation demo; training still needs [fsdp].
train = ["skyrl[skyrl-train]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skyrl_sandbox"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
constraint-dependencies = [
    "flashinfer-jit-cache==0.6.8.post1",
    "flashinfer-cubin==0.6.8.post1",
]
override-dependencies = [
    "nixl-cu13; sys_platform == 'never'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu128"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "vllm-cu129"
url = "https://wheels.vllm.ai/0.20.2/cu129"
explicit = true

[tool.uv.sources]
# Pin SkyRL to the source whose example code this repo copied (PyPI 'skyrl' is a 0.0.1 placeholder):
skyrl = { git = "https://github.com/NovaSky-AI/SkyRL.git", rev = "6c300c75" }
flashinfer-jit-cache = { index = "flashinfer-cu128", marker = "sys_platform == 'linux'" }
vllm = [{ index = "vllm-cu129", marker = "sys_platform == 'linux'" }]
flash-attn = { url = "https://github.com/erictang000/flash-attention/releases/download/v2.8.3-torch2.11-clean/flash_attn-2.8.3-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and python_version == '3.12' and platform_machine == 'x86_64'" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
vllm-router = [
    { url = "https://github.com/SumanthRH/router/releases/download/0.1.14.post1/vllm_router-0.1.14-cp38-abi3-manylinux_2_35_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { url = "https://github.com/SumanthRH/router/releases/download/0.1.14.post1/vllm_router-0.1.14-cp38-abi3-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[tool.black]
line-length = 120
